fix: remove image distortion

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -48,6 +48,7 @@
     max-width: 680px;
     height: auto;
     max-height: 500px;
+    object-fit: cover;
 }
 
 .img--big img {
